# message-passing-rs

./: Cargo.toml  Makefile  README.md
src/: client.rs  consumer.rs  lib.rs  message.rs  publisher.rs  test_utils.rs  worker.rs
src/impls/: mod.rs
src/impls/message_format/: consumer.rs
src/impls/sns/: client.rs  message.rs  mod.rs
src/impls/sqs/: client.rs  message.rs
